--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Mansalva|ZCOOL+XiaoWei&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>Document</title>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" style="opacity: .9;">
       <a class="navbar-brand" href="#"><img src="assest/images/logonav.png" class ="logo">   </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -38,7 +39,7 @@
         
       
       <h1 class="display-4"><img src="assest/images/logo.png"></h1>
-      <p class="lead">Connect</p>
+      <p class="lead" style="font-size: 25px;">Connect, Share, Experience</p>
     </div>
   </div>
   
@@ -48,11 +49,12 @@
   <div class="container" style=" height:400px ;">
 
     <div class="row">
-      <div class="col-md-6">
-<h1 >Sign In</h1>
+      <div class="col-md-6 signIn">
+<h1 class="sign" >Sign In</h1>
+<p class="sign" style="font-size: 25px;">Sign in using your login information and start connecting with your friends </p>
 </div> 
-    <form class="col-md-6" style="background: aliceblue;margin-bottom: 100px;;">
-      <div class="form-group " style="margin-top: 75px;  ">
+    <form class="col-md-6" style="background: aliceblue;margin-bottom: 100px; border-style:solid; border-width: 10px; border-color: blue;">
+      <div class="form-group " style="margin-top: 35px; ;  ">
         <label for="exampleInputEmail1">Email address</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
@@ -63,9 +65,9 @@
       </div>
       <div class="form-group form-check">
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        <label class="form-check-label" for="exampleCheck1">Remember Me</label>
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary" style="margin-bottom: 25px;">Login</button>
     </form>
   </div>
 
