--- a/Address.html
+++ b/Address.html
@@ -20,7 +20,7 @@
             <a class="nav-link" href="#">About Us <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">How to Use</a>
+            <a class="nav-link" href="index.html">How to Use</a>
           </li>
           
           <li class="nav-item">
