--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">About Us <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">About Us <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="#">How to Use</a>
@@ -67,14 +67,14 @@
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
         <label class="form-check-label" for="exampleCheck1">Remember Me</label>
       </div>
-      <button type="submit" class="btn btn-primary" style="margin-bottom: 25px;">Login</button>
+      <button type="submit" class="btn btn-primary" style="margin-bottom: 25px;" href ="Address.html">Login</button>
     </form>
   </div>
 
 
 
 
-
+  
   </div>
 
 
