corrected links as they did not work

--- a/Address.html
+++ b/Address.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>Document</title>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" style="opacity: .9;">
-      <a class="navbar-brand" href="#"><img src="assest/images/logonav.png" class ="logo">   </a>
+      <a class="navbar-brand" href="index.html"><img src="assest/images/logonav.png" class ="logo">   </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -20,7 +20,7 @@
             <a class="nav-link" href="#">About Us <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">How to Use</a>
+            <a class="nav-link" href="#">How to Use</a>
           </li>
           
           <li class="nav-item">
@@ -81,13 +81,13 @@
 </div> 
     <form class="col-md-6" style="background: aliceblue;margin-bottom: 100px; border-style:solid; border-width: 10px; border-color: blue;">
       <div class="form-group " style="margin-top: 35px; ;  ">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        <label for="exampleInputEmail1">Where are you Located?</label>
+        <input type="input" nclass="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <small id="emailHelp" class="form-text text-muted">Enter you ZIP Code</small>
       </div>
       <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <label for="exampleInputPassword1">Enter your Zip Code</label>
+        <input type="input" class="form-control" id="exampleInputPassword1" placeholder="">
       </div>
       <div class="form-group form-check">
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
