Added html to get geolocation

--- a/geolocation.html
+++ b/geolocation.html
@@ -7,6 +7,12 @@
     <title>Geolocation</title>
 </head>
 <body>
+        <div role="main" class="ui-content">
+                <p>Geolocation Page</p>
+                <div id="geoLocation">geoLocation</div>
+                <button id="getGeolocation">get geolocation</button>
+            </div>
+
     
 </body>
 </html>
