Added new key to geolocation api

--- a/geolocation.html
+++ b/geolocation.html
@@ -13,6 +13,11 @@
                 <button id="getGeolocation">get geolocation</button>
             </div>
 
+            <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+            <script src="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+            <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDD-2n_QlCZb4hA7jXe2OjqB8XUEbtJImI"></script>
+            <script src="assest/javascript/geolocation.js"></script>
+
     
 </body>
 </html>
