--- a/geolocation.html
+++ b/geolocation.html
@@ -13,8 +13,7 @@
                 <button id="getGeolocation">get geolocation</button>
             </div>
 
-            <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
-            <script src="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
             <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDD-2n_QlCZb4hA7jXe2OjqB8XUEbtJImI"></script>
             <script src="assest/javascript/geolocation.js"></script>
 
