added getlocation to get lat long

--- a/geolocation.html
+++ b/geolocation.html
@@ -8,9 +8,9 @@
 </head>
 <body>
         <div role="main" class="ui-content">
-                <p>Geolocation Page</p>
+                <p id="geolocation">Geolocation Page</p>
                 <div id="geoLocation">geoLocation</div>
-                <button id="getGeolocation">get geolocation</button>
+                <button id="getGeolocation" onclick="getLocation()">get geolocation</button>
             </div>
 
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
