Added directions on geolocation

--- a/geolocation.html
+++ b/geolocation.html
@@ -12,6 +12,19 @@
                 <div id="geoLocation">geoLocation</div>
                 <button id="getGeolocation" onclick="getLocation()">get geolocation</button>
             </div>
+            <!--second page-->
+
+            <div data-role="page" id="mapPage">
+
+                <div role="main" class="ui-content">
+                    <button id="getLocationOnMap" onclick="getMapLocation()"></button>
+                    <div id="mmap-canvas"> map-canvas</div>
+
+                </div>
+
+
+
+            </div>
 
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
             <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDD-2n_QlCZb4hA7jXe2OjqB8XUEbtJImI"></script>
@@ -19,4 +32,4 @@
 
     
 </body>
-</html>
+</html> 
