Added input field to accept address dynamically

--- a/Address.html
+++ b/Address.html
@@ -92,7 +92,8 @@
     <form class="col-md-6" style="background: aliceblue;margin-bottom: 100px; border-style:solid; border-width: 10px; border-color: blue;">
         <div id="floating-panel">
             <strong>Start:</strong>
-            <select id="start">
+            <input type="text" id="start">
+            <!-- <select id="start">
               <option value="chicago, il">Chicago</option>
               <option value="st louis, mo">St Louis</option>
               <option value="joplin, mo">Joplin, MO</option>
@@ -105,7 +106,7 @@
               <option value="barstow, ca">Barstow</option>
               <option value="san bernardino, ca">San Bernardino</option>
               <option value="los angeles, ca">Los Angeles</option>
-            </select>
+            </select> -->
             <br>
             <strong>End:</strong>
             <select id="end">
