Added code to get directions from entered start and end addresses

--- a/Address.html
+++ b/Address.html
@@ -109,7 +109,8 @@
             </select> -->
             <br>
             <strong>End:</strong>
-            <select id="end">
+            <input type="text" id="end">
+            <!-- <select id="end">
               <option value="chicago, il">Chicago</option>
               <option value="st louis, mo">St Louis</option>
               <option value="joplin, mo">Joplin, MO</option>
@@ -121,8 +122,9 @@
               <option value="kingman, az">Kingman</option>
               <option value="barstow, ca">Barstow</option>
               <option value="san bernardino, ca">San Bernardino</option>
-              <option value="los angeles, ca">Los Angeles</option>
-            </select>
+              <option va lue="los angeles, ca">Los Angeles</option>
+            </select>-->
+            <button id="get-directions">Go!</button>
           </div>
           <div id="right-panel"></div>
           <input id="inputTest"></input>
