added authentication for the login on the index html

--- a/Address.html
+++ b/Address.html
@@ -181,6 +181,7 @@ async defer></script>
   firebase.analytics();
 
   const database = firebase.database();
+  const message = firebase.messaging();
 
   let chat = "";
   let chatlog = 0; 
