--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="form-group " style="margin-top: 35px; ;  ">
         <label for="exampleInputEmail1">Email address</label>
         <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        <small id="emailHelp" class="form-text text-muted" >We'll never share your email with anyone else.</small>
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Password</label>
@@ -133,14 +133,17 @@ $(".signIn").on('click', e=>{
   const email = document.getElementById("inputEmail").value;
   const pass =  document.getElementById("inputPassword").value;
   const promise = firebase.auth().signInWithEmailAndPassword(email, pass);
+
+  promise.catch(e=>{$(".text-muted").text(e.message)
   
-  promise.catch(e=>{$(".text-muted").text(e.message)})
+
+})
   
 })
   
 firebase.auth().onAuthStateChanged(user=>{ 
   if(user){
-    
+    window.location = 'address.html'
   } else{
     
   }
