Added functions to get geometrical coordinates of address

--- a/Address.html
+++ b/Address.html
@@ -126,7 +126,9 @@
             </select>-->
             <button id="get-directions">Go!</button>
           </div>
-          <div id="right-panel"></div>
+          <div id="right-panel">
+            
+          </div>
           <input id="inputTest"></input>
       
           <button type="button" class="btn btn-primary" id = "findLocation">Find Location</button>
