Added dropdown to accept restaurant category

--- a/Address.html
+++ b/Address.html
@@ -110,10 +110,16 @@
             <br>
             <strong>End:</strong>
             <input type="text" id="end">
-            <!-- <select id="end">
-              <option value="chicago, il">Chicago</option>
-              <option value="st louis, mo">St Louis</option>
-              <option value="joplin, mo">Joplin, MO</option>
+            <!--Accept restaurant category-->
+            <br>
+            <strong>Category</strong>
+            <!--<input type="text" id="end">-->
+            <select id="category">
+              <option value="lunch">Lunch</option>
+              <option value="coffee">Coffee</option>
+              <option value="dinner">Dinner</option>
+            </select>
+             <!-- <option value="joplin, mo">Joplin, MO</option>
               <option value="oklahoma city, ok">Oklahoma City</option>
               <option value="amarillo, tx">Amarillo</option>
               <option value="gallup, nm">Gallup, NM</option>
@@ -122,8 +128,8 @@
               <option value="kingman, az">Kingman</option>
               <option value="barstow, ca">Barstow</option>
               <option value="san bernardino, ca">San Bernardino</option>
-              <option va lue="los angeles, ca">Los Angeles</option>
-            </select>-->
+              <option va lue="los angeles, ca">Los Angeles</option>-->
+            
             <button id="get-directions">Go!</button>
           </div>
           <div id="right-panel">
