--- a/Address.html
+++ b/Address.html
@@ -165,9 +165,10 @@
  
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCM2ChWHyTWpo5OJQFdiI-4tLDFUugVc7Q&callback=initMap"
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCM2ChWHyTWpo5OJQFdiI-4tLDFUugVc7Q&callback=initMap&libraries=places, geometry"
 
 async defer></script>
+
 
 <script src="https://maps.googleapis.com/maps/api/geocode/json?address=77064&key=AIzaSyCM2ChWHyTWpo5OJQFdiI-4tLDFUugVc7Q"></script>
 
@@ -183,6 +184,7 @@ async defer></script>
 <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-analytics.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-database.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-auth.js"></script>
+
 
 
 <script>
