--- a/Address.html
+++ b/Address.html
@@ -38,7 +38,9 @@
         </form>
       </div>
     </nav>
-  <div class="jumbotron jumbotron-fluid">
+
+
+    <div class="jumbotron jumbotron-fluid">
     
     <div class="container">
        
@@ -159,6 +161,32 @@
 
 </div> 
 
+<!--Modal-->
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="info-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
@@ -212,7 +240,8 @@ $("#btnLogOut").on('click', e=>{
 })
 firebase.auth().onAuthStateChanged(user=>{ 
   if(user){
-    console.log(user.displayName)
+    console.log(user.displayName);
+    $("#info-modal").modal('show');
   } else{
     window.location = 'index.html'
   }
