--- a/Address.html
+++ b/Address.html
@@ -163,27 +163,19 @@
 
 <!--Modal-->
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
-</button>
 
-<!-- Modal -->
-<div class="modal fade" id="info-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!--  start address Modal -->
+<div class="modal fade" id="start-address-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="static">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
+        <h5 class="modal-title" id="exampleModalLabel">Enter your location</h5>
+        <br>
       </div>
       <div class="modal-body">
-        ...
+        <input type="text" id="start-address"> 
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+      
     </div>
   </div>
 </div>
@@ -241,11 +233,13 @@ $("#btnLogOut").on('click', e=>{
 firebase.auth().onAuthStateChanged(user=>{ 
   if(user){
     console.log(user.displayName);
-    $("#info-modal").modal('show');
+    $("#start-address-modal").modal('show');
+   
   } else{
     window.location = 'index.html'
   }
 })
+
   let chat = "";
   let chatlog = 0; 
   $("#send").on("click", function(event) {
