Accepted start and end input from odal

--- a/Address.html
+++ b/Address.html
@@ -179,7 +179,21 @@
     </div>
   </div>
 </div>
-
+<!--  start end Modal -->
+<div class="modal fade" id="end-address-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="static">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Enter your friend's location</h5>
+        <br>
+      </div>
+      <div class="modal-body">
+        <input type="text" id="end-address"> 
+      </div>
+      
+    </div>
+  </div>
+</div>
 
 
 
