--- a/Address.html
+++ b/Address.html
@@ -179,12 +179,12 @@
       </div>
       <div class="modal-body">
         <select id="category">
-            <option value="aquarium">Aquarium</option>
-          <option value="restaurant">Restaurant</option>
-          <option value="cafe">Cafe</option>
-          <option value="movie_theater">Movies</option>
-          <option value="shopping_mall">Mall</option>
-          <option value="zoo">Zoo</option>
+            <option value="aquarium">Aquarium  &#128044;</option>
+          <option value="restaurant">Restaurant &#127836;</option>
+          <option value="cafe">Cafe &#9749;</option>
+          <option value="movie_theater">Movies &#128250;</option>
+          <option value="shopping_mall">Mall &#127970; </option>
+          <option value="zoo">Zoo  &#129409; </option>
 
         </select>
       </div>
